# fonts-shop

./: .gitignore  Dockerfile  README.MD  TZ.md  docker-compose.yml  pyproject.toml  req.txt  run_uwsgi.sh
djangoProject/: auth_backends.py  dev_settings.py  prod_settings.py  settings.py  urls.py  validators.py
fonts_app/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
fonts_app/management/commands/: plot_user_orders_analytics.py
users/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: wait_for_db.py
users/templates/users/: custom_password_reset.html
